# oaishell

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  TEXTUAL_PORT_SUMMARY.md  heavy_styling.py  pyproject.toml  test.py
.continue/agents/: feature-orchestrator.md  issue-resolver.md
.continue/rules/: review.md
doc/: FEATURE_COMPARISON.md  TEXTUAL_PORT.md  architecture.md  configuration.md  index.md
examples/: complex_formatting.yaml  dummy_server.yaml  formatting.yaml  gemini.yaml  opencode.yaml  stopchat.yaml  stopchat_full.yaml  test_features.yaml
oai_shell/: main.py
oai_shell/config/: __init__.py  manager.py  models.py
oai_shell/engine/: __init__.py  client.py  utils.py
oai_shell/shell/: __init__.py  runner.py  textual_app.py
plan/: features.md  github_copilot_features.md
plan/implemented/: request-autofill.md  response-formatting.md  tui-call-selection.md
plan/in_progress/: request-autofill.md  response-formatting.md  response-schemas.md  tui-call-selection.md
tests/: create_demo_screenshot.py  dummy_server.py  repro_issue_7.py  test_autocomplete_scope.py  test_engine.py  test_new_features.py  test_operations_layout.py  test_prefix.py  test_textual.py  test_textual_errors.py
